Fix for scroll on mobile

--- a/public/css/app/display_foldrum.css
+++ b/public/css/app/display_foldrum.css
@@ -86,3 +86,7 @@ img.gallery_img {
 #bottom-banner h1, #bottom-banner h4, #bottom-banner button{
 	opacity: 0;
 }
+
+html {
+	overflow-x: hidden;
+}
